--- a/views/homepage/section.ejs
+++ b/views/homepage/section.ejs
@@ -20,8 +20,7 @@
                 <div class="row">
                     <div class="col-6 py-2">
                         <a href="/find/<%= data[0].pizza[i].pr_id %>">
-                            <div class="text-center itemCard" name="<%=i%>" onmouseover="showBTN(this)"
-                                onmouseout="hideBTN(this)">
+                            <div class="text-center itemCard" name="<%=i%>"                                >
 
                                 <img class="my-2 cardImg cardImg<%=i%>"
                                     src="../../products/images/pizza/<%= data[0].pizza[i].pr_img %>">
@@ -56,8 +55,7 @@
                     <!-- Pizza panel second row start -->
                     <div class="col-6 py-2">
                         <a href="/find/<%= data[0].pizza[i+1].pr_id %>">
-                            <div class="text-center itemCard" name="<%=i+1%>" onmouseover="showBTN(this)"
-                                onmouseout="hideBTN(this)">
+                            <div class="text-center itemCard" name="<%=i+1%>"                                >
 
                                 <img class="my-2 cardImg cardImg<%=i+1%>"
                                     src="../../products/images/pizza/<%= data[0].pizza[i+1].pr_img %>">
@@ -108,8 +106,7 @@
                 <div class="row">
                     <div class="col-6 py-2">
                         <a href="/find/<%= data[1].burgers[i].pr_id %>">
-                            <div class="text-center itemCard" name="<%=4*(j)%>" onmouseover="showBTN(this)"
-                                onmouseout="hideBTN(this)">
+                            <div class="text-center itemCard" name="<%=4*(j)%>"                                >
 
                                 <img class="my-2 cardImg cardImg<%=i%>"
                                     src="../../products/images/burgers/<%= data[1].burgers[i].pr_img %>">
@@ -126,8 +123,7 @@
                     <!-- burgers panel second row start -->
                     <div class="col-6 py-2">
                         <a href="/find/<%= data[1].burgers[i+1].pr_id %>">
-                            <div class="text-center itemCard" name="<%=4*(j+1)%>" onmouseover="showBTN(this)"
-                                onmouseout="hideBTN(this)">
+                            <div class="text-center itemCard" name="<%=4*(j+1)%>"                                >
 
                                 <img class="my-2 cardImg cardImg<%=i%>"
                                     src="../../products/images/burgers/<%= data[1].burgers[i+1].pr_img %>">
@@ -164,8 +160,7 @@
                 <div class="row">
                     <div class="col-6 py-2">
                         <a href="/find/<%= data[2].beverages[i].pr_id %>">
-                            <div class="text-center itemCard" name="<%=4*(j)%>" onmouseover="showBTN(this)"
-                                onmouseout="hideBTN(this)">
+                            <div class="text-center itemCard" name="<%=4*(j)%>"                                >
 
                                 <img class="my-2 cardImg cardImg<%=i%>"
                                     src="../../products/images/beverages/<%= data[2].beverages[i].pr_img %>">
@@ -183,8 +178,7 @@
                     <!-- Beverages panel second row start -->
                     <div class="col-6 py-2">
                         <a href="/find/<%= data[2].beverages[i+1].pr_id %>">
-                            <div class="text-center itemCard" name="<%=4*(j+1)%>" onmouseover="showBTN(this)"
-                                onmouseout="hideBTN(this)">
+                            <div class="text-center itemCard" name="<%=4*(j+1)%>"                                >
 
                                 <img class="my-2 cardImg cardImg<%=i%>"
                                     src="../../products/images/beverages/<%= data[2].beverages[i+1].pr_img %>">
