--- a/views/homepage/section.ejs
+++ b/views/homepage/section.ejs
@@ -1,7 +1,8 @@
 <div class="container">
     <!-- HERO -->
-    <div class="heroDiv">
-        <img src="../../images/2.png" alt="" class="img-fluid mt-3 hero">
+    <div class="heroDiv text-center">
+        <img src="../../images/2.png" class="img-fluid mt-3 hero d-md-none">
+        <img class="mt-1 img-fluid d-none d-md-flex hero" src="../../images/superhero.png">
     </div>
 
     <!-- Delicious Pizza Heading START -->
