Setting up Category pages

--- a/views/categorypage/pizza/section.ejs
+++ b/views/categorypage/pizza/section.ejs
@@ -1,108 +1,3 @@
-<% 
-//console.log(itemDoc);
-let path = "../../products/images/" + itemDoc.pr_cat + "/" + itemDoc.item.pr_img;
-let itemTitle = itemDoc.item.pr_name;
-let itemId = itemDoc.item.pr_id;
-let itemInfo = itemDoc.item.pr_info;
-let itemPrice = itemDoc.item.pr_price;
-let pzaReg = itemDoc.item.pr_price.size_reg;
-let pzaMed = itemDoc.item.pr_price.size_med;
-let pzaLrg = itemDoc.item.pr_price.size_lrg;
-
-let imgPath=[];   
-imgPath.push("../../products/images/" + itemDoc.pr_category[0] + "/" + itemDoc.recommended[0].pr_img);
-imgPath.push("../../products/images/" + itemDoc.pr_category[0] + "/" + itemDoc.recommended[1].pr_img);
-imgPath.push("../../products/images/" + itemDoc.pr_category[1] + "/" + itemDoc.recommended[2].pr_img);
-imgPath.push("../../products/images/" + itemDoc.pr_category[1] + "/" + itemDoc.recommended[3].pr_img);
-
-let type1 = typeof itemDoc.recommended[0].pr_price;
-let type2 = typeof itemDoc.recommended[2].pr_price;
-%>
-
 <div class="container">
-    <!-- A row for item image and its features -->
-    <div class="row justify-content-center mt-3">
-        <!-- Item image -->
-        <div class="col-md-6 py-2 bg-white text-center border itemBox">
-            <img class="itemImg" src="<%= path %>">
-            <!-- Item features -->
-            <h4 style="height: 30px"><%= itemTitle %></h4>
-            <p class="text-muted" style="font-size: 12px;"><%= itemInfo %></p>
-            <% if(itemDoc.pr_cat == 'pizza'){ %>
-            <div class="row mb-2">
-                <div class="col-4">
-                    <button class="btn btn-outline-warning price_button" id="reg" onclick="activate('reg','med','lrg')">
-                        Reg: ₹<%= pzaReg %>
-                    </button>
-        </div>
-                <div class="col-4">
-                    <button class="btn btn-outline-warning price_button" id="med" onclick="activate('med','reg','lrg')">
-                        Med: ₹<%= pzaMed %>
-                    </button>
-                </div>
-                <div class="col-4">
-                    <button class="btn btn-outline-warning price_button" id="lrg" onclick="activate('lrg','reg','med')">
-                        Lrg: ₹<%= pzaLrg %>
-                    </button>
-                </div>
-            </div>
-            <% } else {%>
-            <p> <strong>Price: </strong>₹<%= itemPrice %> </p>
-            <% }%>
-            <button class="mt-1 text-white w-50 btn btn-warning" onclick="addToCart(this)"
-                id="<%=itemId%>">
-                Add to Cart
-                <i class="fas fa-shopping-cart"></i>
-            </button>
-        </div>
-    </div>
-    <!-- Recommended items -->
-    <!-- Full screen row -->
-    <h4 class="text-center mt-3">
-        <img src="../../images/foodIcon.png" class="img-fluid" style="width: 30px;">
-        <span class="heading">Recommended</span>
-    </h4>
-    <div class="row justify-content-center">
-        <!-- Complete item group in middle -->
-        <div class="col-md-6">
-            <% for(let i=0;i <= itemDoc.recommended.length - 1;i++){ %>
-            <!-- Individual item row start -->
-            <a href="<%= itemDoc.recommended[i].pr_id %>" style="text-decoration: none; color: black;">
-                <div class="row border my-3 bg-white">
-                    <div class="col-4 border-right imgDiv text-center">
-                        <img src="<%= imgPath[i] %>" alt="No-img" class="img-fluid recImg">
-                    </div>
-                    <div class="col-8 mt-3">
-                        <div>
-                            <h6> <%= (itemDoc.recommended[i].pr_name).toUpperCase() %> </h6>
-                            <p class="para"> <%= itemDoc.recommended[i].pr_info %> </p>
-
-                            <% if(typeof itemDoc.recommended[i].pr_price == 'object'){ %>
-                            <table class="w-100">
-                                <thead>
-                                    <tr>
-                                        <th>Reg</th>
-                                        <th>Med</th>
-                                        <th>Lrg</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>₹<%= itemDoc.recommended[i].pr_price.size_reg %></td>
-                                        <td>₹<%= itemDoc.recommended[i].pr_price.size_med %></td>
-                                        <td>₹<%= itemDoc.recommended[i].pr_price.size_lrg %></td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                            <% } else {%>
-                            <p> <strong>Price: </strong>₹<%= itemDoc.recommended[i].pr_price %> </p>
-                            <% }%>
-                        </div>
-                    </div>
-                </div>
-            </a>
-            <!-- Individual item row end -->
-            <% }%>
-        </div>
-    </div>
+    Pza
 </div>
