--- a/views/categorypage/beverages/home.ejs
+++ b/views/categorypage/beverages/home.ejs
@@ -1,3 +1,3 @@
-<%- include ../homepage/header %>
+<%- include ../../homepage/header %>
 <%- include section %>
-<%- include ../homepage/footer %>
+<%- include ../../homepage/footer %>
