--- a/views/homepage/header.ejs
+++ b/views/homepage/header.ejs
@@ -66,7 +66,7 @@
         </a>
     </nav>
     <!-- Secondary navbar -->
-    <nav class="d-md-none justify-content-center navbar navbar-light text-white nav2">
+    <nav class="justify-content-center navbar navbar-light text-white nav2 sticky-top">
             <div class="accounts">                
                 <a href="/" class="mx-2 text-white">
                      <i class="fas fa-home text-white"></i>
@@ -81,7 +81,7 @@
                     Beverages
                 </a>
                 <%if(logStatus == 'true'){%>
-        <span class="dropdown">
+        <span class="dropdown d-md-none">
             <a href="/beverages" class="mx-2 text-white dropdown-toggle" data-toggle="dropdown">
                 <img src="../../images/accountImg.png" width="48px" class="d-none d-lg-flex">
                 <i class="fas fa-shopping-cart"></i>
