--- a/views/homepage/header.ejs
+++ b/views/homepage/header.ejs
@@ -100,10 +100,10 @@
             </ul>
         </span>
         <%} else {%>
-        <a href="/login" class="mx-2 text-white">
+        <a href="/login" class="mx-2 text-white d-md-none">
             <i class="fas fa-sign-in-alt"></i>
         </a>
-        <a href="/signup" class="mx-2 text-white">
+        <a href="/signup" class="mx-2 text-white d-md-none">
             <i class="fas fa-user-plus"></i>
         </a>
         <%}%>              
