Setting up delete function of cart

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -99,3 +99,7 @@ a:hover {
     top: 20px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+/* 
+.deleteIcon{
+    text-decoration: none;
+} */
