--- a/views/homepage/header.ejs
+++ b/views/homepage/header.ejs
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="google-site-verification" content="yj1kbtjY92yCsuDv1md1-pYGAbsEjy6ItAksM3yF8xU" />
     <!-- Icon -->
     <link rel="shortcut icon" href="../../images/favicon.ico" type="image/x-icon">
     <!-- Bootstrap CSS CDN -->
