--- a/views/cartpage/section.ejs
+++ b/views/cartpage/section.ejs
@@ -28,10 +28,10 @@ for(let i=0;i<=cart.length -1 ; i++)
                 <span class="heading">Items in your Cart</span>
             </h4>
             <div class="row justify-content-center">
-                <!-- Complete item group in middle -->
+                <!-- Complete item group in Middle -->
                 <div class="col-md-9">
                     <% for(let i=0;i <= cart.length - 1;i++){ %>
-                    <!-- Individual item row start -->
+                    <!-- Individual item row Start -->
                     <a href="/find/<%= cart[i].id %>" style="text-decoration: none; color: black;">
                         <div class="row border my-3 bg-white">
                             <div class="col-4 border-right imgDiv text-center">
