--- a/views/itempage/section.ejs
+++ b/views/itempage/section.ejs
@@ -49,7 +49,7 @@ let type2 = typeof itemDoc.recommended[2].pr_price;
             <% } else {%>
             <p> <strong>Price: </strong>₹<%= itemPrice %> </p>
             <% }%>
-            <button class="mt-1 text-white w-50 btn btn-warning" onclick="addToCart(this)"
+            <button class="mt-1 text-white w-50 btn btn-warning ATCBtn" onclick="addToCart(this)"
                 id="<%=itemId%>">
                 Add to Cart
                 <i class="fas fa-shopping-cart"></i>
