--- a/public/css/style.css
+++ b/public/css/style.css
@@ -99,3 +99,8 @@ a:hover {
     top: 20px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
+#delIcon:hover{
+    transform: scale(1.1);
+    transition:0.07s;
+}
