--- a/views/checkoutpage/sections.ejs
+++ b/views/checkoutpage/sections.ejs
@@ -17,7 +17,7 @@
         </div>
     </div>
 </div> -->
-<div class="container">
+<div class="container mb-5">
     <div class="row mt-2">
         <div class="col-md-6">
             <h3 class="mt-5 text-secondary">Select Delivery Address</h3>
