--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,12 +45,14 @@ a:hover {
     height: 100%;
     vertical-align: middle;
 }
+
 .cartItemImg {
     display: inline-block;
     height: 100%;
     /* width: 200px; */
     vertical-align: middle;
 }
+
 .itemCard {
     background-color: white;
     border: 2px solid #f0f0f0;
@@ -94,13 +96,28 @@ a:hover {
 
 .cartBadgeLrg {
     font-size: 10px;
-    position: absolute;    
+    position: absolute;
     right: 85px;
     top: 20px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-#delIcon:hover{
+#delIcon:hover {
     transform: scale(1.1);
-    transition:0.07s;
+    transition: 0.07s;
+}
+
+.listItem:hover {
+    color: white;
+    background-color: orange;
+    transition: 0.18s;
+}
+
+.listItem {
+    padding-left: 10px;
+}
+
+.itemLink:hover{
+    transform: scale(1.1);
+    transition: 0.07s;
 }
